--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,4 +6,5 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Copy heraldex.js to examples
-        run: cp heraldex.js example/Timedex/heraldex.js
+        run:  |
+          cp heraldex.js example/Timedex/heraldex.js
